--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,7 +172,7 @@
 <!-- Experience -->
 
 <button style="padding:2.5%; border:0px transparent; background-color: transparent;outline:none;"type="button" class="collapsible" data-toggle="collapse" data-target="#content-experience" id="experience">
-  <h2>Research Experience</h2>
+  <h2>Experience</h2>
 </button>
 <div id="content-experience" class="collapse in">
 
