--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dp3.jpg"><img src="images/dp3.jpg" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
+              <a href="images/dp3.png"><img src="images/dp3.png" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
@@ -132,7 +132,7 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical optimization for Robot Design and Control  </li> 
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control)  </li> 
                     <br>
                     <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
                     <br>
