--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,7 +203,7 @@
                 </ul>
                 <div class="row">
                   <div class="column">
-                    <img src="images/go1.png" alt="go1" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/robot_walk_1.gif" alt="go1" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>                  
                 </div>
