--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -205,6 +205,8 @@
                   <div class="column">
                     <img src="images/robot_walk_4.gif" alt="go1" style="width:23%; height:auto; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/wavefront.gif" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/carto.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>                  
                 </div>
             </p>
@@ -248,6 +250,12 @@
               <li align="justify">Conducted numeric simulation (ANSYS ACP), destructive and non-destructive (ultrasonic) testing of different composite samples with different composite layup schemes. </li>
               <li align="justify">Collaborated in preparation of coursework and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8. </li>
           </ul>
+          <div class="row">
+            <div class="column">
+              <img src="images/vtol_2.gif" alt="go1" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
+              
+            </div>                  
+          </div>
       </td>
   </tr>
 
