--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -205,8 +205,8 @@
                   <div class="column">
                     <img src="images/robot_walk_4.gif" alt="go1" style="width:23%; height:auto; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
-                    <img src="images/wavefront.gif" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
-                    <img src="images/carto.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/wavefront_1.gif" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/gazebo_2.png" alt="carto" style="width:49%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>                  
                 </div>
             </p>
@@ -252,7 +252,7 @@
           </ul>
           <div class="row">
             <div class="column">
-              <img src="images/vtol_2.gif" alt="go1" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
+              <img src="images/vtol_2.gif" alt="go1" style="width:200%; height:100; border-radius: 5%; border: 2px solid #555">
               
             </div>                  
           </div>
