--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,12 +203,13 @@
                 </ul>
                 <div class="row">
                   <div class="column">
-                    <div style="display:flex; flex-direction:row;">
-                      <img src="images/robot_walk_4.gif" alt="go1" style="width:25%; height:auto; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/carto.png" alt="carto" style="width:45%; height:auto; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/gazebo_2.gif" alt="gazebo" style="width:30%; height:auto; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/wavefront_1.gif" alt="wavefront" style="width:60%; height:auto; border-radius: 5%; border: 2px solid #555">
+                    <div style="display:flex; flex-direction:row; text-align: center;">
+                      <img src="images/robot_walk_4.gif" alt="go1" style="flex:1; height:120px; border-radius: 5%; border: 2px solid #555">
+                      <img src="images/carto.png" alt="carto" style="flex:1; height:120px; border-radius: 5%; border: 2px solid #555">
+                      <img src="images/gazebo_2.gif" alt="gazebo" style="flex:1; height:120px; border-radius: 5%; border: 2px solid #555">
+                      
                     </div>
+                    <img src="images/wavefront_1.gif" alt="wavefront" style="width:30%; height:auto; border-radius: 5%; border: 2px solid #555">
                   </div>                  
                 </div>
             </p>
