--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -204,9 +204,10 @@
                 <div class="row">
                   <div class="column">
                     <div style="display:flex; flex-direction:row; text-align: center;">
-                      <img src="images/robot_walk_4.gif" alt="go1" style="flex:1;width:120px; height:150px; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/carto.png" alt="carto" style="flex:1;width:300px; height:150px; border-radius: 5%; border: 2px solid #555">
-                      <img src="images/gazebo_3.gif" alt="gazebo" style="flex:1; height:150px; border-radius: 5%; border: 2px solid #555">
+                      <img src="images/robot_walk_4.gif" alt="go1" style="flex:1;width:90px; height:180px; border-radius: 5%; border: 2px solid #555">
+                      <img src="images/gazebo_3.gif" alt="gazebo" style="flex:1; width: 120; height:180px; border-radius: 5%; border: 2px solid #555">
+                      <img src="images/carto.png" alt="carto" style="flex:1; height:180px; border-radius: 5%; border: 2px solid #555">
+                      
                       
                     </div>
                     <!--img src="images/wavefront_1.gif" alt="wavefront" style="width:30%; height:auto; border-radius: 5%; border: 2px solid #555"-->
