--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -203,8 +203,11 @@
                 </ul>
                 <div class="row">
                   <div class="column">
-                    <img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
-                    <img src="images/carto.gif" alt="gazebo" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
+                    <div style="text-align: center;">
+                      <img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"> 
+                    </div>
+                    <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
+                    <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
                     
                     <!--div style="display:flex; flex-direction:row; text-align: center;">
                       <img src="images/robot_walk_4.gif" alt="go1" style="flex:1;width:90px; height:180px; border-radius: 5%; border: 2px solid #555">
