--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -204,7 +204,7 @@
                 <div class="row">
                   <div class="column">
                     <div style="text-align: center;">
-                      <img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"> 
+                      <img src="images/robot_walk_3.gif" alt="go1" style="width:70%; height:160px; border-radius: 5%; border: 2px solid #555"> 
                     </div>
                     <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
@@ -263,7 +263,7 @@
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
-                <img src="images/vtol_2.gif" alt="go1" style="width:50%; height:auto; border-radius: 5%; border: 2px solid #555">
+                <img src="images/vtol_2.gif" alt="go1" style="width:70%; height:160px; border-radius: 5%; border: 2px solid #555">
               </div>
             </div>                  
           </div>
