--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -196,10 +196,15 @@
               Working as student research assistant (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                     <li align="justify">Assisted deployment of mapping system on GO1 quadruped-robot. Streamline the process for calibrating, synchronizing, communicating, and  data recording from the sensors.</li>
-                    <li align="justify">Implemented different ROS libraries for lidar-based localization and mapping. Dockerized and configured libraries for the mapping system.</li>
-                    <li align="justify">Working on the implementation of pose graph optimization on the existing
-                      SLAM library and benchmarking localization performance of different slam
-                      packages.</li>
+                    <li align="justify">Implemented various ROS libraries for lidar-based localization and map-
+                      ping. Dockerized and configured the libraries for seamless use within the
+                      mapping system for indoor and outdoor environment.</li>
+                    <li align="justify">Improved localization module by adding functionality of initial alignment
+                      with existing map. Benchmarked localization and mapping performance
+                      of different slam packages.</li>
+                    <li align="justify">Enhanced 2D BIM-to-SLAM simulation code to incorporate support for
+                      Gazebo for 3D environments. Also creating a light weight Blender based
+                      lidar simulation module for large BIM models.</li>
                 </ul>
                 <div class="row">
                   <div class="column">
@@ -240,8 +245,20 @@
           <p align="justify">
             Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
             National University of Science and University.
+            <ul>
+              <li align="justify">Created conceptual and preliminary design (aeronautics calculations) for
+                fixed-wing UAVs and VTOL.</li>
+              <li align="justify">Co-Led detail design activity to create CAD models in SolidWorks and
+                exporting of manufacturing plans. Optimized aerodynamics and structural
+                components by conducting CFD, FEA, FSI simulations using ANSYS.</li>
+              <li align="justify">Design test bench and propulsion system for DLE-120 and Rotax-914 engine.</li>
+              <li align="justify">Created model for VTOL (vertical take off and landing) and fixed-wing
+                aerial vehicle for x-plane flight simulator.</li>
+              <li align="justify">Created setup for SITL (software in the loop) simulation by integrating x-plane
+                flight simulator environment with mission planner (PX4) firmware, for
+                tuning controller of fixed wing UAVs.</li>
           </p>
-          <p>Control Group:
+          <!--p>Control Group:
               <ul> 
                   <li align="justify">Created model for VTOL, fixed-wing UAVs in x-plane flight simulator.</li>
                   <li align="justify">Conducted SITL (software in the loop) simulation by integrating x-plane flight simulator environment with mission 
@@ -259,7 +276,7 @@
           <ul> 
               <li align="justify">Conducted numeric simulation (ANSYS ACP), destructive and non-destructive (ultrasonic) testing of different composite samples with different composite layup schemes. </li>
               <li align="justify">Collaborated in preparation of coursework and conducted lab sessions on calibrating and sizing defects through PAUT (phased array ultrasonic testing) using Omni scan MX8. </li>
-          </ul>
+          </ul-->
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
