--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -178,6 +178,35 @@
 
 <table border=0 class="bg_colour" style="padding:20px;width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto"><tbody>
 
+
+  <tr>
+    <td style="padding:10px;width:25%;vertical-align:top">
+        <div class="one">
+            <img src='images/huawei-logo.png' width="140" class="side-image">
+        </div>
+    </td>
+    <td style="padding:10px;width:75%;vertical-align:top">
+        <papertitle><big><b>Huawei </b></big></papertitle>
+        <br>
+        <papertitle style="color:gray"><big>Robotics Research Intern </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <br>
+        May 2023 - Present
+        <br>
+        <p align="justify">
+          Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>   
+on the area of life-long mapping and localization.            
+            <!--ul>
+                <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
+                  a hydraulic jump in jet impingement cooling.</li>
+                <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
+                  surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
+                  characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
+                <li align="justify">Mentored undergraduate student groups, on their research project.</li>
+            </ul-->
+        </p>
+    </td>
+  </tr>
+
     <tr>
         <td style="padding:10px;width:25%;vertical-align:top">
             <div class="one">
@@ -190,7 +219,7 @@
             <br>
             <papertitle style="color:gray"><big>Research Assistant </big></papertitle><papertitle><big>- Chair of Computational Modeling and Simulation</big></papertitle>
             <br>
-            Jul 2022 - Present
+            Jul 2022 - Apr 2023
             <br>
             <p align="justify">
               Working as student research assistant (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
@@ -209,7 +238,7 @@
                 <div class="row">
                   <div class="column">
                     <div style="text-align: center;">
-                      <img src="images/robot_walk_3.gif" alt="go1" style="width:70%; height:160px; border-radius: 5%; border: 2px solid #555"> 
+                      <img src="images/robot_walk_3.gif" alt="go1" style="width:60%; height:160px; border-radius: 5%; border: 2px solid #555"> 
                     </div>
                     <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
@@ -280,7 +309,7 @@
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
-                <img src="images/vtol_2.gif" alt="go1" style="width:70%; height:160px; border-radius: 5%; border: 2px solid #555">
+                <img src="images/vtol_2.gif" alt="go1" style="width:60%; height:160px; border-radius: 5%; border: 2px solid #555">
               </div>
             </div>                  
           </div>
