--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -222,7 +222,7 @@ on the area of life-long mapping and localization.
             Jul 2022 - Apr 2023
             <br>
             <p align="justify">
-              Working as student research assistant (HiWi) for the development of mapping system using LiDAR and RGBD cameras at <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+              Contributed as a student research assistant (HiWi) towards the <a href="https://intrepid-project.eu/">Intriped-Project</a>  at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                     <li align="justify">Assisted deployment of mapping system on GO1 quadruped-robot. Streamline the process for calibrating, synchronizing, communicating, and  data recording from the sensors.</li>
                     <li align="justify">Implemented various ROS libraries for lidar-based localization and map-
