--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,7 +182,7 @@
   <tr>
     <td style="padding:10px;width:25%;vertical-align:top">
         <div class="one">
-            <img src='images/huawei-logo.png' width="140" class="side-image">
+            <img src='images/huawei-logo.jpg' width="140" class="side-image">
         </div>
     </td>
     <td style="padding:10px;width:75%;vertical-align:top">
@@ -238,7 +238,7 @@ on the area of life-long mapping and localization.
                 <div class="row">
                   <div class="column">
                     <div style="text-align: center;">
-                      <img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"> 
+                      <img src="images/robot_walk_3.gif" alt="go1" style="width:60%; height:170px; border-radius: 5%; border: 2px solid #555"> 
                     </div>
                     <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
