job descirption updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -182,19 +182,18 @@
   <tr>
     <td style="padding:10px;width:25%;vertical-align:top">
         <div class="one">
-            <img src='images/huawei-logo.jpg' width="140" class="side-image">
+            <img src='images/huawei-logo.png' width="140" class="side-image">
         </div>
     </td>
     <td style="padding:10px;width:75%;vertical-align:top">
-        <papertitle><big><b>Huawei </b></big></papertitle>
+        <papertitle><big><b>Huawei Munich</b></big></papertitle>
         <br>
         <papertitle style="color:gray"><big>Robotics Research Intern </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
         May 2023 - Present
         <br>
         <p align="justify">
-          Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>   
-on the area of life-long mapping and localization.            
+          Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a> on the area of life-long mapping and localization.            
             <!--ul>
                 <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
                   a hydraulic jump in jet impingement cooling.</li>
