--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -397,7 +397,7 @@
         <br>
         <br>
         <br>
-
+        (* equal author contribution)
 </div>
 <hr class="soft">
 <!-- Intell Projects 
