job descirption updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
             
               <br>
               <p align="justify">I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I am also working as a student research assistant at the 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working as a robotics research intern at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
                 and mapping along with their implementation using different robotics systems.
               </p>
