job descirption updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -230,9 +230,9 @@
                     <li align="justify">Improved localization module by adding functionality of initial alignment
                       with existing map. Benchmarked localization and mapping performance
                       of different slam packages.</li>
-                    <li align="justify">Enhanced 2D BIM-to-SLAM simulation code to incorporate support for
-                      Gazebo for 3D environments. Also creating a light weight Blender based
-                      lidar simulation module for large BIM models.</li>
+                    <li align="justify">Enhanced 2D BIM-to-SLAM simulation code to incorporate support for3D environments with
+                      Gazebo. Also creating a light-weight Blender based
+                      lidar simulation module.</li>
                 </ul>
                 <div class="row">
                   <div class="column">
