--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -234,11 +234,12 @@
                       Gazebo. Also creating a light-weight Blender based
                       lidar simulation module.</li>
                 </ul>
+                <div style="text-align: center;">
+                  <img src="images/robot_walk_5.gif" alt="go1" style="width:100%; height:160px; border-radius: 5%; border: 2px solid #555"> 
+                </div>
                 <div class="row">
                   <div class="column">
-                    <div style="text-align: center;">
-                      <img src="images/robot_walk_3.gif" alt="go1" style="width:55%; height:165px; border-radius: 5%; border: 2px solid #555"> 
-                    </div>
+                    
                     <!--img src="images/robot_walk_3.gif" alt="go1" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555">
                     <img src="images/carto.png" alt="carto" style="width:50%; height:170px; border-radius: 5%; border: 2px solid #555"-->
                     
@@ -285,6 +286,7 @@
               <li align="justify">Created setup for SITL (software in the loop) simulation by integrating x-plane
                 flight simulator environment with mission planner (PX4) firmware, for
                 tuning controller of fixed wing UAVs.</li>
+              </ul>
           </p>
           <!--p>Control Group:
               <ul> 
@@ -308,7 +310,7 @@
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
-                <img src="images/vtol_2.gif" alt="go1" style="width:60%; height:160px; border-radius: 5%; border: 2px solid #555">
+                <img src="images/vtol_2.gif" alt="go1" style="width:65%; height:160px; border-radius: 5%; border: 2px solid #555">
               </div>
             </div>                  
           </div>
@@ -339,6 +341,9 @@
                   <li align="justify">Mentored undergraduate student groups, on their research project.</li>
               </ul>
           </p>
+          <div style="text-align: center;">
+                  <img src="images/cfd_jet.gif" alt="cfd" style="width:100%; height:160px; border-radius: 5%; border: 2px solid #555"> 
+          </div>
       </td>
   </tr>
 
