--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -235,7 +235,7 @@
                       lidar simulation module.</li>
                 </ul>
                 <div style="text-align: center;">
-                  <img src="images/robot_walk_6.gif" alt="go1" style="width:80%; height:150px; border-radius: 5%; border: 2px solid #555"> 
+                  <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
                 </div>
                 <div class="row">
                   <div class="column">
@@ -310,7 +310,7 @@
           <div class="row">
             <div class="column">
               <div style="text-align: center;">
-                <img src="images/vtol_4.gif" alt="go1" style="width:80%; height:150px; border-radius: 5%; border: 2px solid #555">
+                <img src="images/vtol_4.gif" alt="vtol" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555">
               </div>
             </div>                  
           </div>
@@ -339,13 +339,10 @@
                     surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
                     characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
                   <li align="justify">Mentored undergraduate student groups, on their research project.</li>
-                  
-                  <div style="text-align: center;">
-                    <img src="images/cfd_jet.gif" alt="cfd" style="width:80%; height:160px; border-radius: 5%; border: 2px solid #555"> 
-                  </div>
-              
-                </ul>
-              
+              </ul>
+              <div style="text-align: center;">
+                <img src="images/cfd_jet.gif" alt="cfd" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
+              </div>
           </p>
           
       </td>
