--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/dp4.png"><img src="images/dp4.png" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
+              <a href="images/dp4.jpeg"><img src="images/dp4.jpeg" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
