--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,8 +96,8 @@
                 <a href="mailto:rafaymohiuddin7@gmail.com" target="_blank">Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/rafaymohiuddin/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/1QGMpc6YowSVTd4miYXixmWZoSa1KaHp4/view?usp=sharing" target="_blank"> CV</a> 
+                <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
+                <a href="https://drive.google.com/file/d/1z4RDWKfP1iaansLZzt5o1V9-DPxHuzQ1/view?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -280,7 +280,7 @@
               <li align="justify">Co-Led detail design activity to create CAD models in SolidWorks and
                 exporting of manufacturing plans. Optimized aerodynamics and structural
                 components by conducting CFD, FEA, FSI simulations using ANSYS.</li>
-              <li align="justify">Design test bench and propulsion system for DLE-120 and Rotax-914 engine.</li>
+              <li align="justify">Design propulsion system and testbench for DLE-120 and engine.</li>
               <li align="justify">Created model for VTOL (vertical take off and landing) and fixed-wing
                 aerial vehicle for x-plane flight simulator.</li>
               <li align="justify">Created setup for SITL (software in the loop) simulation by integrating x-plane
