--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
                 <a href="https://drive.google.com/file/d/1z4RDWKfP1iaansLZzt5o1V9-DPxHuzQ1/view?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
-            <td style="padding:2.5%;width:40%;max-width:40%">
+            <td style="padding:2.5%;width:30%;max-width:30%">
               <a href="images/dp4.jpeg"><img src="images/dp4.jpeg" style="width:120%;max-width:120%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
@@ -234,9 +234,9 @@
                       Gazebo. Also creating a light-weight Blender based
                       lidar simulation module.</li>
                 </ul>
-                <div style="text-align: center;">
+                <!--div style="text-align: center;">
                   <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
-                </div>
+                </div commented-->
                 <div class="row">
                   <div class="column">
                     
