--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -234,9 +234,9 @@
                       Gazebo. Also creating a light-weight Blender based
                       lidar simulation module.</li>
                 </ul>
-                <!--div style="text-align: center;">
+                <div style="text-align: center;">
                   <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
-                </div commented-->
+                </div>
                 <div class="row">
                   <div class="column">
                     
