--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control)  </li> 
+                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
                     <br>
                     <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
                     <br>
