--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,10 +132,14 @@
             <p align="justify">
                 Course Work:
                 <ul>
-                    <li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
+                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
+                    <br>
+                    <li align="justify"><b>Mechanics:</b> AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
+                    <br>
+                    <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
                     <br>
                     <li align="justify"><b>Mechanics:</b> Computational Material Modeling I & II, Computational Fluid Dynamics, AI in Computational Mechanics, Finite Element Method I, Continuum Mechanics, Computational Material Modeling II, Advanced Fluid Dynamics *   </li>
-                    <br>
+                    <br-->
                     (* in progress)
                     
                 </ul>
@@ -158,7 +162,6 @@
           <br>
           <p align="justify">
               Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets. 
-              <br>
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
               <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
           </p>
