--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,7 +130,13 @@
             Oct 2021 - Present
             <br>
             <p align="justify">
-                Course Work:
+              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios
+                <!--ul>
+                    <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
+                    <br>                               
+                </ul-->
+
+                <b>Course Work:</b>
                 <ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>
@@ -162,6 +168,7 @@
           <br>
           <p align="justify">
               Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets. 
+              <!--br-->
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
               <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
           </p>
