--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,10 +127,10 @@
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
             <br>
-            Oct 2021 - Present
+            Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios
+              <b>Thesis*:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios (Huawei + TUM) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -140,7 +140,7 @@
                 <ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>
-                    <li align="justify"><b>Mechanics:</b> AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
+                    <li align="justify"><b>Mechanics:</b> Advanced Fluid Mechanics*, AI in Computational Mechanics, Computational Material Modeling I, Computational Material Modeling II, Computational Fluid Dynamics, Continuum Mechanics, Finite Element Methods I  </li>
                     <br>
                     <!--li align="justify"><b>Computation:</b> Computation in Engineering I & II (C++), Professional Software Development, Cyber-Physical Systems Lab, Software Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Scientific Visualization,  Numerical Optimization (Robot Design and Control), Advanced Deep Learning in Physics.  </li> 
                     <br>
