--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,8 +74,9 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working as a robotics research intern at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>. Prior to that, during my masters I worked as a student research assistant at the 
+              <p align="justify">Hi!, I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
+                before this I was working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
                 and mapping along with their implementation using different robotics systems.
               </p>
@@ -130,12 +131,12 @@
             Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis*:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios (Huawei + TUM) <br>
+              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (Huawei + TUM) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
                 </ul-->
-
+                <br>
                 <b>Course Work:</b>
                 <ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
