--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi!, I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+              <p align="justify">Hi! , I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I was working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
@@ -131,7 +131,7 @@
             Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (Huawei + TUM) <br>
+              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -171,7 +171,7 @@
               Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets. 
               <!--br-->
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
-              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
+              <!--a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a-->             
           </p>
       </td>
   </tr>
