--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,7 +131,7 @@
             Oct 2021 - Mar 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>) <br>
+              <b>Thesis:</b> Zero-Shot Open Vocabulary Reasoning in Open World Scenarios* (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -168,10 +168,10 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              Numerical Investigation of Heat Transfer Enhancement Techniques in Impinging Jets. 
+              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. 
               <!--br-->
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
-              <!--a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a-->             
+              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
           </p>
       </td>
   </tr>
