--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -198,21 +198,38 @@
     </td>
     <td style="padding:10px;width:75%;vertical-align:top">
         <papertitle><big><b>Huawei Munich</b></big></papertitle>
+
         <br>
-        <papertitle style="color:gray"><big>Robotics Research Intern </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <papertitle style="color:gray"><big>Masters Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
-        May 2023 - Present
+        Oct 2023 - Present
         <br>
         <p align="justify">
           Working as a research intern at the <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a> on the area of life-long mapping and localization.            
             <!--ul>
-                <li align="justify">Conducted a comparative study to assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
-                  a hydraulic jump in jet impingement cooling.</li>
-                <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
-                  surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
-                  characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
-                <li align="justify">Mentored undergraduate student groups, on their research project.</li>
+                <li align="justify">ncorporated multiple functionalities (pose graph optimization, hierarchical bun-
+                  dle adjustment ...) to improved performance of lidar based life long localization
+                  and mapping module.</li>
+                <li align="justify">Extensively reviewed literature to study recent trends and potential research
+                  directions in the area of 3D perception.</li>
+                <li align="justify">Develop basic prototype for open vocabulary 3D object detection.</li>
             </ul-->
+        </p>
+
+        <br>
+        <papertitle style="color:gray"><big>Robotics Research Intern </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <br>
+        May 2023 - Oct 2023
+        <br>
+        <p align="justify">
+          Contributed as robotics research intern at the on the area of 3D perception at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>.         
+            <ul>
+                <li align="justify">ncorporated multiple functionalities (pose graph optimization, hierarchical bundle adjustment ...) to improved performance of lidar based life long localization
+                  and mapping module.</li>
+                <li align="justify">Extensively reviewed literature to study recent trends and potential research
+                  directions in the area of 3D perception.</li>
+                <li align="justify">Develop basic prototype for open vocabulary 3D object detection.</li>
+            </ul>
         </p>
     </td>
   </tr>
