--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -224,7 +224,7 @@
         <p align="justify">
           Contributed as robotics research intern at the on the area of 3D perception at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>.         
             <ul>
-                <li align="justify">ncorporated multiple functionalities (pose graph optimization, hierarchical bundle adjustment ...) to improved performance of lidar based life long localization
+                <li align="justify">Incorporated multiple functionalities (pose graph optimization, hierarchical bundle adjustment ...) to improved performance of lidar based life long localization
                   and mapping module.</li>
                 <li align="justify">Extensively reviewed literature to study recent trends and potential research
                   directions in the area of 3D perception.</li>
