--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -217,7 +217,7 @@
         </p-->
 
         <br>
-        <papertitle style="color:gray"><big>Research Intern / Masters Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <papertitle style="color:gray"><big>Research Intern | Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
         May 2023 - Mar 2024
         <br>
