--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,8 +75,8 @@
             
               <br>
               <p align="justify">Hi! , I am a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
-                before this I was working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am <!--working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
+                before this I was--> working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on methods for 3D scanning 
                 and mapping along with their implementation using different robotics systems.
               </p>
@@ -217,19 +217,19 @@
         </p-->
 
         <br>
-        <papertitle style="color:gray"><big>Research Intern | Thesis Student </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
+        <papertitle style="color:gray"><big>Research Intern  </big></papertitle><papertitle><big>- Intelligent Clound Technologies Lab</big></papertitle>
         <br>
         May 2023 - Mar 2024
         <br>
         <p align="justify">
           Contributed as robotics research intern at the on the area of 3D perception at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>.         
-            <ul>
+            <!--ul>
                 <li align="justify">Incorporated multiple functionalities (pose graph optimization, hierarchical bundle adjustment ...) to improved performance of lidar based life long localization
                   and mapping module.</li>
                 <li align="justify">Extensively reviewed literature to study recent trends and potential research
                   directions in the area of 3D perception.</li>
                 <li align="justify">Develop basic prototype for open vocabulary 3D object detection.</li>
-            </ul>
+            </ul-->
         </p>
     </td>
   </tr>
