--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,9 +74,8 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi!, you can call me Rafay. <i>I work with mathematical models, convert them to code to solve problems in engineering</i>.
+              <p align="justify">Hi!, you can call me Rafay. I work with mathematical models, convert them to code to solve problems in engineering.
               </p>
-              <br>
               <p align="justify">I am also a Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis in the area on 'Open World Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I was working as a Research Intern mainly focusing on lidar based life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
